        font-weight:bold;
        margin-top:1em;
        margin-bottom:0.5em;
        text-align:center }
      div.subtitle {
        color:#C0F0C0;
        font-size:0.8em;
        margin-bottom:1em;
        text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
    $ 1.4
      % Version 33
      _ 2017-xx-xx
      * #142 Check MQ configuration at sync and after.
      * More lib inside like LeakCanay and Greenrobot Eventbus.
      * Correct a possible memory leak on devices < Android N caused by WIFI_SERVICE.
      * Try to reduce memory used with SharedPreferences.
      * A big underground works on preferences.
      * #153 Ask user if he need credentials (login/password) after qrcode results.
      * #152 Some menu re-arrangement.
      * Close #108 Preferences order
      * Close #102 Qrcode is fully available now and with more information in domogik 0.6 dev.
      * #5 avoid try to write and get Exception if no access.
      * #38 still more translation from transifex.
      * Lots of comment add in source code to help myself :).
      % Version 32
      _ 2017-02-25
      * #141 at sync ask user if it's is preferred wi-fi networks.
      * Save user choice to prefs for SSL error in domogik admins view.
      % Version 31
      _ 2017-02-19
      * Try to correct android Play Store SSL issue.
      % Version 28
      _ 2017-02-15
      ! Important fill the local wifi SSID in server option to be used as local network otherwise external access will never work.
      * Handle connectivity to switch from internal to external domogik ip/port.
      * Added external domogik rest option.
      * Move MQ options in a new submenu.
      * Handle DT_colorCII.
      * Close #149 Handle dt_scaling for sensor.
      * Close #148 Handle SSL in Domogik administration view.
      * Close #146 Rename don't work since new rest call.
      * Close #143 Missing Yahoo weather translation.