@@ -22,6 +22,8 @@
     $ 1.4
       % Version 33
       _ 2017-xx-xx
+      * Close #156 Don't ask user preferred wifi at each sync.
+      * Close #107 map back navigation bug.
       * #142 Check MQ configuration at sync and after.
       * More lib inside like LeakCanay and Greenrobot Eventbus.
       * Correct a possible memory leak on devices < Android N caused by WIFI_SERVICE.
